--- a/BBConfigurator/MainWindow.xaml
+++ b/BBConfigurator/MainWindow.xaml
@@ -1,59 +1,19 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="BBConfigurator.MainWindow"
-        Title="MainWindow" d:DesignHeight="440.808" HorizontalAlignment="Center" VerticalAlignment="Center" Width="361.872" SizeToContent="WidthAndHeight" ResizeMode="NoResize">
-    <DockPanel HorizontalAlignment="Center" VerticalAlignment="Center" IsEnabled="False">
-        <StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <Label Content="#1" Margin="5" />
-                <Button Content="Browse" Margin="5" />
-                <TextBlock Text=".." Width="100" Margin="5" />
-                <CheckBox IsEnabled="False" VerticalAlignment="Center" HorizontalAlignment="Center" />
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <Label Content="#2" Margin="5" />
-                <Button Content="Browse" Margin="5" />
-                <TextBlock Text=".." Width="100" Margin="5" />
-                <CheckBox IsEnabled="False" VerticalAlignment="Center" HorizontalAlignment="Center" />
-
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <Label Content="#3" Margin="5" />
-                <Button Content="Browse" Margin="5" />
-                <TextBlock Text=".." Width="100" Margin="5" />
-                <CheckBox IsEnabled="False" VerticalAlignment="Center" HorizontalAlignment="Center" />
-
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <Label Content="#4" Margin="5" />
-                <Button Content="Browse" Margin="5" />
-                <TextBlock Text=".." Width="100" Margin="5" />
-                <CheckBox IsEnabled="False" VerticalAlignment="Center" HorizontalAlignment="Center" />
-
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <Label Content="#5" Margin="5" />
-                <Button Content="Browse" Margin="5" />
-                <TextBlock Text=".." Width="100" Margin="5" />
-                <CheckBox IsEnabled="False" VerticalAlignment="Center" HorizontalAlignment="Center" />
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <Label Content="#6" Margin="5" />
-                <Button Content="Browse" Margin="5" />
-                <TextBlock Text=".." Width="100" Margin="5" />
-                <CheckBox IsEnabled="False" VerticalAlignment="Center" HorizontalAlignment="Center" />
-
-            </StackPanel>
-            <Separator Height="20" Opacity="0.5"/>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <Separator></Separator>
-                <Button Content="Cancel" Margin="5" HorizontalAlignment="Right" />
-                <Separator Width="100" Visibility="Hidden"></Separator>
-                <Button Content="Save" Margin="5" />
-
-            </StackPanel>
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:BBCommon="clr-namespace:BBCommon;assembly=BBCommon"
+    xmlns:bbConfigurator="clr-namespace:BBConfigurator"
+    mc:Ignorable="d" x:Class="BBConfigurator.MainWindow"
+        Title="MainWindow" HorizontalAlignment="Center" VerticalAlignment="Center" SizeToContent="WidthAndHeight" >
+    <DockPanel Margin="10">
+        <StackPanel DockPanel.Dock="Bottom" Margin="10,0,0,0">
+            <Button x:Name="btnSave" Content="Save" Margin="5" Click="BtnSave_OnClick"/>
+        </StackPanel>
+        <StackPanel x:Name="mainContent"  Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5">
+            
         </StackPanel>
     </DockPanel>
+
+
 
 </Window>
