--- a/BBConfigurator/MainWindow.xaml
+++ b/BBConfigurator/MainWindow.xaml
@@ -2,15 +2,15 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:BBCommon="clr-namespace:BBCommon;assembly=BBCommon"
-    xmlns:bbConfigurator="clr-namespace:BBConfigurator"
+    xmlns:bbConfigurator="clr-namespace:BBConfigurator" x:Name="ConfiguratorWindow"
     mc:Ignorable="d" x:Class="BBConfigurator.MainWindow"
-        Title="MainWindow" HorizontalAlignment="Center" VerticalAlignment="Center" SizeToContent="WidthAndHeight" >
+        Title="BlackBox Configurator" HorizontalAlignment="Center" VerticalAlignment="Center" SizeToContent="WidthAndHeight" ResizeMode="NoResize" Icon="ConfiguratorIcon.png" >
     <DockPanel Margin="10">
         <StackPanel DockPanel.Dock="Bottom" Margin="10,0,0,0">
             <Button x:Name="btnSave" Content="Save" Margin="5" Click="BtnSave_OnClick"/>
         </StackPanel>
-        <StackPanel x:Name="mainContent"  Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5">
-            
+        <StackPanel x:Name="mainContent"  Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="2">
+
         </StackPanel>
     </DockPanel>
 
