--- a/BBConfigurator/MainWindow.xaml
+++ b/BBConfigurator/MainWindow.xaml
@@ -1,10 +1,16 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:BBCommon="clr-namespace:BBCommon;assembly=BBCommon"
-    xmlns:bbConfigurator="clr-namespace:BBConfigurator" x:Name="ConfiguratorWindow"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:BBCommon="clr-namespace:BBCommon;assembly=BBCommon"
+    xmlns:bbConfigurator="clr-namespace:BBConfigurator"
+    xmlns:tb="http://www.hardcodet.net/taskbar"
+    xmlns:commands="clr-namespace:BBConfigurator.Commands"
+    x:Name="ConfiguratorWindow"
     mc:Ignorable="d" x:Class="BBConfigurator.MainWindow"
         Title="BlackBox Configurator" HorizontalAlignment="Center" VerticalAlignment="Center" SizeToContent="WidthAndHeight" ResizeMode="NoResize" Icon="ConfiguratorIcon.png" >
+    
     <DockPanel Margin="10">
         <StackPanel DockPanel.Dock="Bottom" Margin="10,0,0,0">
             <Button x:Name="btnSave" Content="Save" Margin="5" Click="BtnSave_OnClick"/>
@@ -12,8 +18,21 @@
         <StackPanel x:Name="mainContent"  Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="2">
 
         </StackPanel>
+
+
+        <tb:TaskbarIcon x:Name="Taskbar" 
+                    IconSource="ConfiguratorIcon.ico"
+                    ToolTipText="BlackBox Configurator"
+                    MenuActivation="LeftOrRightClick">
+
+            <tb:TaskbarIcon.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="Restart" x:Name="RestartMenuItem" Click="RestartMenuItem_OnClick" />
+                    <Separator></Separator>
+                    <MenuItem  Header="Show\Hide" x:Name="ShowHideMenuItem" Click="ShowHideMenuItem_OnClick" />
+                    <MenuItem  Header="Close BlackBox" x:Name="CloseMenuItem" Click="CloseMenuItem_OnClick" />
+                </ContextMenu>
+            </tb:TaskbarIcon.ContextMenu>
+        </tb:TaskbarIcon>
     </DockPanel>
-
-
-
 </Window>
