--- a/BBConfigurator/App.xaml
+++ b/BBConfigurator/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml"
-             xmlns:local="clr-namespace:BBConfigurator"
+             DispatcherUnhandledException="App_OnDispatcherUnhandledException"
             >
 
     <Application.Resources>
