--- a/BBConfigurator/View/MainWindow.xaml
+++ b/BBConfigurator/View/MainWindow.xaml
@@ -3,11 +3,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:BBCommon="clr-namespace:BBCommon;assembly=BBCommon"
-    xmlns:bbConfigurator="clr-namespace:BBConfigurator"
-    xmlns:tb="http://www.hardcodet.net/taskbar"
+	xmlns:tb="http://www.hardcodet.net/taskbar"
     x:Name="ConfiguratorWindow"
-    mc:Ignorable="d" x:Class="BBConfigurator.MainWindow"
+    mc:Ignorable="d" x:Class="BBConfigurator.View.MainWindow"
         Title="BlackBox Configurator" HorizontalAlignment="Center" VerticalAlignment="Center" SizeToContent="WidthAndHeight" ResizeMode="NoResize" Icon="ConfiguratorIcon.png">
 
     <DockPanel Margin="10">
